<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashActivity"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/app_icon_transparent"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="55dp"
                android:textStyle="bold|italic"
                android:visibility="gone"></TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llNoInternetConnectionSplash"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.9"
            android:background="@drawable/not_internet_splash_bg"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_warning"
                app:tint="@color/colorPrimary"></ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="-5dp"
                android:text="@string/no_internet_connection_splash"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/retry_button_splash"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:text="@string/worker_text"
                android:textColor="@color/colorPrimary"
                android:textSize="28dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>