<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:src="@drawable/app_icon_transparent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:lineSpacingExtra="2sp"
                android:text="@string/login_title"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="35dp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="43dp"
                    android:layout_marginTop="65dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/login_hello"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="43dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="45dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/login_description"
                    android:textColor="#333333"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="42dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/country_code_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorEditTextLayoutHintColor"
                        android:theme="@style/TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_country_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:digits="0123456789"
                            android:drawablePadding="5dp"
                            android:fontFamily="sans-serif"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/login_country_code_hint"
                            android:textColor="@color/colorEditTextTextColor"
                            android:theme="@style/TextInputEditText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mobile_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorEditTextLayoutHintColor"
                        android:theme="@style/TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:fontFamily="sans-serif"
                            android:hint="@string/login_mobile_number_hint"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textColor="@color/colorEditTextTextColor"
                            android:theme="@style/TextInputEditText" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="42dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginEnd="42dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/gradient_button_bg"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/login_button_text"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/no_internet_connection_layout"></include>
    <include layout="@layout/error_layout"></include>
</LinearLayout>