<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">


        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="4dp"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"
            app:tint="@android:color/white"></ImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="-5sp"
            android:text="@string/profile_picture_option_dialog_toolbar_title_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvChooseOptionFromGallery"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/choose_image_option_card_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iVChooseOptionFromGallery"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/circle_black_check_bg"
                        android:padding="6dp"
                        android:src="@drawable/ic_tick"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:padding="15dp"
                        android:background="@drawable/choose_image_option_circle_bg"
                        android:visibility="visible"
                        android:src="@drawable/ic_photo_library_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/profile_picture_option_dialog_gallery_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvOpenCameraAndCaptureImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/choose_image_option_card_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iVOpenCameraAndCaptureImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/circle_black_check_bg"
                        android:padding="6dp"
                        android:src="@drawable/ic_tick"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:padding="15dp"
                        android:background="@drawable/choose_image_option_circle_bg"
                        android:visibility="visible"
                        android:src="@drawable/ic_camera_alt_black_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/profile_picture_option_dialog_camera_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <Button
            android:id="@+id/btnSelectOptionAndProceed"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/gradient_button_bg"
            android:baselineAligned="false"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/profile_picture_option_dialog_button_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>